--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import Hamburger from "./Hamburger.astro";
 import Navigation from "./Navigation.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
@@ -28,8 +29,9 @@ import Navigation from "./Navigation.astro";
     <div id="hamburger" class="cursor-pointer hover:opacity-80 md:hidden">
       <Hamburger />
     </div>
-    <nav class="hidden md:flex gap-6">
+    <nav class="hidden md:flex items-center gap-6">
       <Navigation />
+      <ThemeIcon />
     </nav>
   </div>
 
