Add CSS styling for a dark theme

--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -2,7 +2,7 @@
 const { tags } = Astro.props;
 ---
 
-<div class="border bg-gray-50 rounded-md p-4 border-gray-200 w-fit">
+<div class="border bg-gray-50 dark:bg-blue-100 dark:text-black rounded-md p-4 border-gray-200 w-fit">
   {
     tags.map((tag: string) => (
       <p>
