--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,7 +14,7 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body class="flex flex-col h-screen">
+  <body class="flex flex-col h-screen dark:bg-stone-800 text-white">
     <Header />
 
     <main class="p-4 flex-1 mx-auto w-md mb-20">
