--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const platform = "github";
 const username = "withastro";
 ---
 
-<footer class="p-16 bg-blue-900 text-white flex justify-between">
+<footer class="p-16 bg-blue-900 dark:bg-gray-900 text-white flex justify-between">
   <p>
     Learn more about my projects on <a
       href={`https://www.${platform}.com/${username}`}>{platform}</a
