--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,9 +6,9 @@ import ThemeIcon from "./ThemeIcon.astro";
 
 <header>
   <div
-    class="flex gap-8 md:gap-0 justify-between py-4 px-8 border-b border-gray-200"
+    class="flex gap-8 md:gap-0 justify-between py-4 px-8 border-b border-gray-200 dark:border-gray-500"
   >
-    <div class="flex gap-2 items-center text-blue-900">
+    <div class="flex gap-2 items-center text-blue-900 dark:text-white">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
