--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -14,7 +14,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <article class="prose mx-auto my-8">
+  <article class="prose dark:prose-invert mx-auto my-8">
     <p>
       Published on: {new Date(frontmatter.pubDate).toLocaleDateString()}
     </p>
@@ -24,7 +24,7 @@ const { frontmatter } = Astro.props;
         frontmatter.tags.map((tag: string) => (
           <a
             href={`/tags/${tag}`}
-            class="py-1 px-2 text-xs font-medium bg-blue-100 rounded-lg hover:bg-blue-200 transition-colors no-underline"
+            class="dark:text-black py-1 px-2 text-xs font-medium bg-blue-100 rounded-lg hover:bg-blue-200 transition-colors no-underline"
           >
             {tag}
           </a>
