--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -14,9 +14,9 @@ const pageTitle = "Tag Index";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h1 class="text-4xl my-8 font-bold text-pink-500">{pageTitle}</h1>
+  <h1 class="text-4xl my-8 font-bold">{pageTitle}</h1>
 
-  <p class="mb-6">
+  <p class="mb-6 text-pink-500">
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima aliquid
     excepturi corporis perferendis blanditiis.
   </p>
