--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -2,12 +2,12 @@
 const { tags } = Astro.props;
 ---
 
-<div class="border bg-gray-50 dark:bg-blue-100 text-black rounded-md p-4 border-gray-200 w-fit">
+<div class="flex flex-col gap-2">
   {
     tags.map((tag: string) => (
-      <p>
+      <p class="border bg-blue-50 dark:bg-blue-100 text-black rounded-md px-2 border-blue-200 w-fit">
         <a
-          class="text-sm hover:underline opacity-70 uppercase hover:opacity-100"
+          class="text-sm hover:underline opacity-70 hover:opacity-100"
           href={`/tags/${tag}`}
         >
           {tag}
