--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,13 +1,11 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "./BaseLayout.astro";
-import Tags from "../components/Tags.astro";
 
-const allPosts = Object.values(
-  import.meta.glob("../pages/posts/*.md", { eager: true })
-);
+const allPosts = await getCollection("blog");
 
 const tags = [
-  ...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat()),
+  ...new Set(allPosts.map((post: any) => post.data.tags).flat()),
 ];
 
 const { frontmatter } = Astro.props;
@@ -16,7 +14,7 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
   <article class="prose dark:prose-invert mx-auto my-8">
     <p>
-      Published on: {new Date(frontmatter.pubDate).toLocaleDateString()}
+      Published on: {frontmatter.pubDate.toLocaleDateString()}
     </p>
 
     <div class="flex gap-2">
@@ -42,5 +40,4 @@ const { frontmatter } = Astro.props;
 
     <p class="italic">Written by {frontmatter.author}</p>
   </article>
-
 </BaseLayout>
