--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,10 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const allPosts = Object.values(
-  import.meta.glob("./posts/*.md", { eager: true })
-);
+const allPosts = await getCollection("blog");
+
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -16,7 +16,7 @@ const pageTitle = "My Astro Learning Blog";
   <ul class="p-4 mb-4">
     {
       allPosts.map((post: any) => (
-        <BlogPost url={post.url} title={post.frontmatter.title} />
+        <BlogPost url={`/posts/${post.id}`} title={post.data.title} />
       ))
     }
   </ul>
